<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".presentation.ui.view.GameOverFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/game_over_title_id"
        android:text="@string/game_over"
        android:autoSizeTextType="uniform"
        android:maxLines="1"
        android:padding="@dimen/buttons_padding"
        android:textSize="@dimen/big_titles_size"
        android:gravity="center"
        android:layout_marginTop="@dimen/vertical_margins_for_play_fragments_borders"
        android:textStyle="bold"
        android:fontFamily="@font/jim_nightshade_regular"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enter_your_name_text_id"
        android:text="@string/enter_your_name"
        android:autoSizeTextType="uniform"
        android:maxLines="1"
        android:padding="@dimen/buttons_padding"
        android:textSize="@dimen/title_text_size"
        android:gravity="center"
        android:layout_marginTop="@dimen/vertical_margins_for_play_fragments_borders"
        android:textStyle="normal"
        android:fontFamily="@font/jim_nightshade_regular"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/game_over_title_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:layout_width="@dimen/buttons_width"
        android:layout_height="@dimen/buttons_height"
        android:id="@+id/enter_name_edit_text"
        android:text=""
        android:padding="@dimen/buttons_padding"
        android:hint="@string/your_name"
        android:layout_marginTop="@dimen/top_margin_for_items_in_choose_region_screen"
        android:background="@drawable/rounded_button_background"
        app:layout_constraintTop_toBottomOf="@+id/enter_your_name_text_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
         />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submit_score_button"
        android:text="@string/submit"
        android:padding="@dimen/buttons_padding"
        android:autoSizeTextType="uniform"
        android:background="@drawable/rounded_button_background"
        android:textSize="@dimen/text_size_for_buttons"
        android:gravity="center"
        android:layout_marginTop="@dimen/top_margin_for_items_in_choose_region_screen"
        android:layout_marginBottom="@dimen/vertical_margins_screen_borders"
        android:fontFamily="@font/jim_nightshade_regular"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/corner_radius_for_buttons"
        app:layout_constraintTop_toBottomOf="@id/enter_name_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>