<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.view.ChooseTypeOfGameScreenFragment">
    
    <data>
        <variable
            name="viewModel"
            type="com.alexsapps.learncountriesandflagsgame.presentation.ui.viewmodels.GameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/screen_padding"
        android:background="@color/background_color">


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/buttons_width"
            android:layout_height="@dimen/buttons_height"
            android:id="@+id/choose_play_3_lives_button"
            android:text="@string/play_3_lives"
            android:autoSizeTextType="uniform"
            android:padding="@dimen/buttons_padding"
            android:background="@drawable/rounded_button_background"
            android:textSize="@dimen/text_size_for_buttons"
            android:gravity="center"
            android:layout_marginTop="@dimen/vertical_margins_for_seconds_screens"
            android:fontFamily="@font/jim_nightshade_regular"
            android:textColor="@color/black"
            app:cornerRadius="@dimen/corner_radius_for_buttons"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/choose_sudden_death_butoon"
            app:layout_constraintWidth_percent= "@dimen/constraint_width_value"
            app:layout_constraintHeight_percent="@dimen/constraint_height_value"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/buttons_width"
            android:layout_height="@dimen/buttons_height"
            android:id="@+id/choose_sudden_death_butoon"
            android:text="@string/sudden_death"
            android:autoSizeTextType="uniform"
            android:padding="@dimen/buttons_padding"
            android:background="@drawable/rounded_button_background"
            android:textSize="@dimen/text_size_for_buttons"
            android:gravity="center"
            android:fontFamily="@font/jim_nightshade_regular"
            android:textColor="@color/black"
            app:cornerRadius="@dimen/corner_radius_for_buttons"
            app:layout_constraintTop_toBottomOf="@id/choose_play_3_lives_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/choose_practice_butoon"
            app:layout_constraintWidth_percent= "@dimen/constraint_width_value"
            app:layout_constraintHeight_percent="@dimen/constraint_height_value"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/buttons_width"
            android:layout_height="@dimen/buttons_height"
            android:id="@+id/choose_practice_butoon"
            android:text="@string/practice"
            android:autoSizeTextType="uniform"
            android:padding="@dimen/buttons_padding"
            android:background="@drawable/rounded_button_background"
            android:textSize="@dimen/text_size_for_buttons"
            android:gravity="center"
            android:layout_marginBottom="@dimen/vertical_margins_for_seconds_screens"
            android:fontFamily="@font/jim_nightshade_regular"
            android:textColor="@color/black"
            app:cornerRadius="@dimen/corner_radius_for_buttons"
            app:layout_constraintTop_toBottomOf="@id/choose_sudden_death_butoon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent= "@dimen/constraint_width_value"
            app:layout_constraintHeight_percent="@dimen/constraint_height_value"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
